--- a/src/app/graph-qldocs/components/type/type.component.scss
+++ b/src/app/graph-qldocs/components/type/type.component.scss
@@ -14,6 +14,8 @@
   md-icon {
     margin-left: 10px;
     vertical-align: middle;
+    font-size: 20px;
+    color: rgba(0,0,0,0.6);
   }
 
   &__content {
