--- a/src/app/shared/components/advanced-filter/advanced-filter.component.html
+++ b/src/app/shared/components/advanced-filter/advanced-filter.component.html
@@ -10,12 +10,12 @@
       </div>
       <div class="advanced-filter__date__range">
         <div class="datepicker--custom" [class.datepicker-visible]="datepickerVisible">
-          <div (showDaterangepicker)="datepickerVisible = true" (hideDaterangepicker)="datepickerVisible = false" (selected)="dateSelected($event)" daterangepicker>
+          <!--<div (showDaterangepicker)="datepickerVisible = true" (hideDaterangepicker)="datepickerVisible = false" (selected)="dateSelected($event)" daterangepicker>-->
             <div class="advanced-filter__date__range__input" name="daterange" >
                 <span>From <span class="advanced-filter__date__range__input__value">{{ startDate.format('MMM D, YYYY') }}</span>
                       To <span class="advanced-filter__date__range__input__value">{{ endDate.format('MMM D, YYYY') }}</span>
                 </span> <md-icon>keyboard_arrow_down</md-icon> </div>
-          </div>
+          <!--</div>-->
         </div>
       </div>
     </div>
