--- a/src/assets/scss/_advanced-filter.scss
+++ b/src/assets/scss/_advanced-filter.scss
@@ -99,7 +99,7 @@ $color-orange: #F16C00;
     }
 
     @media only screen and (max-width: 1440px) {
-      margin: 10px;
+      margin: -10px 10px;
     }
   }
 
