--- a/src/app/graph-qldocs/components/field/field.component.scss
+++ b/src/app/graph-qldocs/components/field/field.component.scss
@@ -11,7 +11,8 @@
   }
 
   &__copy-icon {
-    margin-left: 20px;
+    margin-left: 18px;
+    transform: rotate(90deg);
     font-size: 16px;
     color: rgba(0,0,0,0.6);
     cursor: pointer;
