Add examples to graphql docs (v1)

--- a/src/app/graph-qldocs/components/field/field.component.html
+++ b/src/app/graph-qldocs/components/field/field.component.html
@@ -10,4 +10,5 @@
     <md-icon *ngIf="enableLink" class="field__copy-icon" md-tooltip="Share, Copy to clipboard" ngxClipboard [cbContent]="getShareLink()">link</md-icon>
   </div>
   <div class="field__description">{{field.description}}</div>
+  <div *ngIf="field.example" class="field__example">{{field.example}}</div>
 </div>
