--- a/src/app/pages/components/table-memory/table-memory.component.html
+++ b/src/app/pages/components/table-memory/table-memory.component.html
@@ -1,6 +1,6 @@
 <div class="entity-view__table-component">
   <div class="entity-view__table-component__header entity-view__table-component__header--homepage">
-    <div class="entity-view__table-component__header__title">Associated {{title}}s</div>
+    <div class="entity-view__table-component__header__title">Associated {{title}}</div>
     <md-input-container *ngIf="filterEnabled" class="entity-view__table-component__header__filter">
       <input md-input placeholder="Filter" [(ngModel)]="filterString" type="text">
     </md-input-container>
