--- a/src/app/pages/dashboard-page/transaction-overview/transaction-overview.component.html
+++ b/src/app/pages/dashboard-page/transaction-overview/transaction-overview.component.html
@@ -6,7 +6,7 @@
       [title]="option.title"
       [mapToResult]="option.mapToResult"
       [image]="option.image"
-      [overview]="analyticsService.transactionsOverview$ | async">
+      [overview]="transactionOverview">
     </transaction-overview-card>
   </div>
 </div>
