--- a/src/app/pages/dashboard-page/transaction-by/transaction-by.component.html
+++ b/src/app/pages/dashboard-page/transaction-by/transaction-by.component.html
@@ -10,10 +10,10 @@
     </md-menu>
   </div>
 
-  <chart *ngIf="transactionBy" #chart (load)="saveChart($event.context)" [options]="options"></chart>
+  <chart *ngIf="transactionBy && transactionBy.count > 0; else transactionByNoData" #chart (load)="saveChart($event.context)" [options]="options"></chart>
   <md-spinner *ngIf="!transactionBy"></md-spinner>
 
-  <div class="dashboard__table" [style.height]="calculateHeight()" [class.dashboard__table--inactive]="!showTable || !transactionBy">
+  <div *ngIf="transactionBy && transactionBy.count > 0" class="dashboard__table" [style.height]="calculateHeight()" [class.dashboard__table--inactive]="!showTable || !transactionBy">
     <table class="highlight">
       <thead>
         <tr>
@@ -36,8 +36,12 @@
     </table>
   </div>
 
+  <ng-template #transactionByNoData>
+    <div *ngIf="transactionBy" class="dashboard__table-chart__no-data"> No Transactions Found</div>
+  </ng-template>
+
   <div class="dashboard__table-chart__actions dashboard__table-chart__actions--no-border">
-    <span (click)="toggleTable()">{{showTable ? 'COLLAPSE' : 'SHOW TABLE'}}</span>
+    <span *ngIf="transactionBy && transactionBy.count > 0" (click)="toggleTable()">{{showTable ? 'COLLAPSE' : 'SHOW TABLE'}}</span>
     <span [routerLink]="['/coming-soon']">VIEW MORE</span>
   </div>
 </div>
