--- a/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.scss
+++ b/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.scss
@@ -4,12 +4,13 @@
     font-size: 14px;
 
     md-input-container {
-      width: 100px;
-      margin-right: 16px;
+      width: 220px;
+      margin-right: 20px;
     }
 
     autocomplete-input {
-      margin-right: 55px;
+      width: 220px;
+      margin-right: 20px;
     }
   }
 
@@ -26,4 +27,11 @@
       margin-top: 48px;
     }
   }
+}
+
+.helper-text {
+  position: absolute;
+  bottom: -20px;
+  font-size: 10px;
+  color: rgba(0, 0, 0, 0.38);;
 }
